Resolves overflow hidden issue

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -213,7 +213,6 @@
 	width: 360px;
 	margin: auto;
 	margin-top: 75px;
-	overflow-x: hidden;
 }
 
 #three .colophon {
